<resources>
    <string name="app_name">Finalproject coronavirus</string>
    <string name="map">MAP</string>
    <string name="covid_19_update">COVID-19 UPDATE</string>
    <string name="_30">30</string>
    <string name="trends">Trends</string>
    <string name="tips">Tips</string>
    <string name="data" />
    <string name="recovered">Recovered</string>
    <string name="cases">CASES</string>
    <string name="actualTips">TIPS</string>
    <string name="surprise">Surprise</string>
    <string name="TIPS">TIPS</string>
    <string name="refresh">refresh</string>
</resources>
